<resources>
    <string name="app_name">PokemonList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pikachu">Pikachu</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="type">Type</string>
    <string name="weakness">Weakness</string>
    <string name="prev_evolution">Prev Evolution</string>
    <string name="next_evolution">Next Evolution</string>
</resources>