<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PokemonDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="80dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    android:text="@string/pikachu"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/height"
                    android:text="@string/height"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/weight"
                    android:text="@string/weight"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/type"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_type"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">


                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:text="@string/weakness"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_weakness"

                    android:layout_width="match_parent"
                    android:layout_height="40dp">


                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:text="@string/prev_evolution"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_prev_evolution"

                    android:layout_width="match_parent"
                    android:layout_height="40dp">


                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:text="@string/next_evolution"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_next_evolution"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">


                </androidx.recyclerview.widget.RecyclerView>




            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/pokemon_image"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/card_view"
            android:layout_marginTop="-50dp"
            android:src="@drawable/ic_launcher_background"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

    </RelativeLayout>



</FrameLayout>